# rgringotts

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  docker-build.sh  rgringotts-docker.sh  rgringotts.toml.example  setup.ps1  setup.sh  to_serve_or_not_to_serve.md
.github/workflows/: ci-server.yml  release-server.yml
src/: README.md  config.rs  main.rs  session.rs  state.rs
src/gringotts/: ffi.rs  mod.rs
src/routes/: entries.rs  folders.rs  mod.rs  session.rs
