[package]
name = "rgringotts"
version = "0.1.0"
edition = "2024"
description = "Encrypted vault REST server backed by libgringotts"
license = "MIT"
authors = ["Daniele"]

[package.metadata.deb]
section = "utils"
priority = "optional"
depends = "libgringotts2, libmcrypt4, libmhash2"
assets = [
  ["target/release/rgringotts", "usr/local/bin/rgringotts", "755"],
  ["rgringotts.toml.example", "etc/rgringotts/rgringotts.toml.example", "644"],
]

[package.metadata.generate-rpm]
assets = [
  { source = "target/release/rgringotts", dest = "/usr/local/bin/rgringotts", mode = "0755" },
  { source = "rgringotts.toml.example", dest = "/etc/rgringotts/rgringotts.toml.example", mode = "0644" },
]

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
dashmap = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
quick-xml = "0.37"
thiserror = "2"
zeroize = "1"
toml = "0.8"
